Make all text align to the right of the image. Fixed get_name which is a
2009-01-06  Claude Paroz  <claude@2xlibre.net>

	* media/css/main.css:
	* templates/people/person_overview.html: Make all text align to the right
	of the image.
	* vertimus/models.py: Fixed get_name which is a function call, not a
	property.

svn path=/trunk/; revision=1310

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -129,9 +129,13 @@ img.screenshot {
   font-size: 140%;
 }
 
-.person_detail img {
+.person_detail .image {
   margin-right: 1em;
   float: left;
+}
+
+.person_detail .txt {
+  margin-left: 95px;
 }
 
 div.mainpage {
